<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        app:cardBackgroundColor="@color/finapp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_txtTitulo"
                    android:layout_width="265dp"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:gravity="bottom|left"
                    android:text="@string/login_titulo"
                    android:textColor="@color/finapp_4"
                    android:textSize="34sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_txtAppName"
                    android:layout_width="163dp"
                    android:layout_height="59dp"
                    android:layout_margin="15dp"
                    android:gravity="bottom"
                    android:text="@string/app_name_upper"
                    android:textAlignment="center"
                    android:textColor="@color/finapp_4"
                    android:textSize="24sp"
                    tools:ignore="RtlCompat" />


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/logo_finapp"
        android:contentDescription="logoAPp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_layoutUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"


        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_txtUsuario"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_usuario" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_layoutClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_layoutUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_txtClave"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_clave" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btnAcceder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/finapp_2"
        android:text="@string/login_acceder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_layoutClave" />

    <Button
        android:id="@+id/login_btnRegistrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/finapp_1"
        android:text="@string/login_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btnAcceder" />
</androidx.constraintlayout.widget.ConstraintLayout>