<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        app:cardBackgroundColor="@color/finapp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/registro_txtTitulo"
                    android:layout_width="289dp"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:gravity="bottom|left"
                    android:text="@string/main_titulo"
                    android:textColor="@color/finapp_4"
                    android:textSize="34sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/registro_txtAppName"
                    android:layout_width="175dp"
                    android:layout_height="59dp"
                    android:layout_margin="15dp"
                    android:gravity="bottom"
                    android:text="@string/app_name_upper"
                    android:textAlignment="textEnd"
                    android:textColor="@color/finapp_4"
                    android:textSize="24sp"
                    tools:ignore="RtlCompat" />


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="302dp"
        android:layout_height="233dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:srcCompat="@drawable/logo_finapp" />

    <Button
        android:id="@+id/btnSucursales"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/main_listar"
        android:textAlignment="center"
        android:textColor="@color/finapp_4"
        android:textSize="20sp"
        app:iconSize="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btn_administrar"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/finapp_2"

        android:text="@string/main_admin"
        android:textAlignment="center"
        android:textColor="@color/finapp_4"
        android:textSize="20sp"
        app:icon="@drawable/ic_config_foreground"
        app:iconSize="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSucursales" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/finapp_1"

        android:text="@string/main_about"
        android:textAlignment="center"
        android:textColor="@color/finapp_4"
        android:textSize="20sp"
        app:icon="@drawable/ic_about_foreground"
        app:iconSize="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_administrar" />

    <androidx.cardview.widget.CardView
        android:layout_width="408dp"
        android:layout_height="45dp"
        app:cardBackgroundColor="@color/finapp_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_about"
        app:layout_constraintVertical_bias="0.987">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_txtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/finapp_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/main_txtLastCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ultima conexión"
                    android:textColor="@color/finapp_4" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/main_btnSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/finapp_5"
                android:contentDescription="Exit btn"
                android:foregroundTint="@color/finapp_4"
                android:foregroundTintMode="add"
                android:maxHeight="5dp"
                app:srcCompat="@drawable/ic_exit_foreground"
                app:tint="@color/finapp_4"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--        android:drawableTop="@drawable/ic_crud"-->

</androidx.constraintlayout.widget.ConstraintLayout>