<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListarSucursalesActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        app:cardBackgroundColor="@color/finapp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/listar_txtTitulo"
                    android:layout_width="289dp"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:gravity="bottom|left"
                    android:text="@string/listar_titulo"
                    android:textColor="@color/finapp_4"
                    android:textSize="34sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/registro_txtAppName"
                    android:layout_width="157dp"
                    android:layout_height="59dp"
                    android:layout_margin="15dp"
                    android:gravity="bottom"
                    android:text="@string/app_name_upper"
                    android:textAlignment="textEnd"
                    android:textColor="@color/finapp_4"
                    android:textSize="24sp"
                    tools:ignore="RtlCompat" />


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="240dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.164"> </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/listar_layout_sucursales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"


        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/listar_txt_banco"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:hint="@string/listar_buscar_banco" />

            <ImageButton
                android:id="@+id/listar_btnBuscarBanco"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/finapp_2"
                app:srcCompat="@drawable/ic_search_foreground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lista_txt_direccion"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:hint="@string/listar_buscar_direccion" />

            <ImageButton
                android:id="@+id/listar_btnBuscar"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/finapp_2"
                app:srcCompat="@drawable/ic_search_foreground" />
        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listar_layout_sucursales"
        app:layout_constraintVertical_bias="0.117"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_about_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/adapter_txtBanco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/adapter_txtTipoSucursal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/listarSucursales_lista"
        android:layout_width="410dp"
        android:layout_height="481dp"
        app:layout_constraintTop_toBottomOf="@+id/listar_layout_sucursales"
        tools:layout_editor_absoluteX="1dp" />
    <androidx.cardview.widget.CardView
        android:layout_width="408dp"
        android:layout_height="45dp"
        app:cardBackgroundColor="@color/finapp_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.987">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_txtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/finapp_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/main_txtLastCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ultima conexión"
                    android:textColor="@color/finapp_4" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/main_btnSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/finapp_5"
                android:contentDescription="Exit btn"
                android:foregroundTint="@color/finapp_4"
                android:foregroundTintMode="add"
                android:maxHeight="5dp"
                app:srcCompat="@drawable/ic_exit_foreground"
                app:tint="@color/finapp_4"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>